# P2P-Food-Donation

./: .gitignore  CMakeLists.txt  README.md
data/: bids.csv  bids_copy.csv  items.csv  users.csv
old_code/: buy_and_sell.c  buy_and_sell.h
src/: CMakeLists.txt  Items  Users  auction.c  auction.h  bids.csv  buy_and_sell.c  buy_and_sell.h  database.c  database.h  input_data.c  input_data.h  interface.c  interface.h  login.c  login.h  main.c  timestamp.c  timestamp.h  userpanel.c  userpanel.h  users.csv
test/: CMakeLists.txt  test_database.c
